<resources>
    <string name="app_name">Course Tracker</string>
    <string name="options">options</string>
    <string name="courseFrag">Courses</string>
    <string name="favFrag">Favorites</string>
    <string name="search">Search</string>
    <string name="nameHint">Name</string>
    <string name="categoryHint">Category</string>
    <string name="ratingHint">Rating</string>
    <string name="descriptionHint">Description</string>
    <string name="name">NAME:</string>
    <string name="category">CATEGORY:</string>
    <string name="rating">RATING:</string>
    <string name="description">DESCRIPTION:</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="dialogTitle">Add a course</string>
    <string name="error1">Must be at least 3 characters!</string>
    <string name="error2">Must be at least 8 characters!</string>
    <string name="ratingError">Values between 1 and 10 only!</string>
    <string name="favorite">Add to favorites</string>
    <string name="book_icon">book icon</string>
    <string name="star_icon">star icon</string>
    <string name="queryHint">Search here...</string>
    <string name="delete">Delete course</string>
    <string name="edit">Edit course</string>
    <string name="save">Save</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="added">Success...</string>
    <string name="ok">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="about_text">This is an application that enables keeping track of all the courses that one has done for academics or any other purpose.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>